--- a/signup.css
+++ b/signup.css
@@ -13,8 +13,13 @@ body {
   );
 }
 .authbox {
-  height: 100vh;
+  height: 400px;
+  margin-top: 100px;
 }
+.authbox2{
+  margin-top: 40px;
+}
+/* ^^ 100vh means 100 view height. which is equal tot the height of the screen */
 .authboxtitle {
   margin-top: 10px;
   font-size: 2rem;
@@ -39,8 +44,8 @@ body {
 .signupbox {
   color: #e7ecef;
   background-color: #393e41;
-  width: 350px;
   min-height: 500px;
+  width: 350px;
   position: absolute;
   box-shadow: rgba(57, 70, 78, 0.15) 0px 0px 1px 0px,
     rgba(57, 70, 78, 0.25) 0px 20px 55px -8px;
